better spacing between players, fix borders

--- a/src/views/Views.css
+++ b/src/views/Views.css
@@ -1,10 +1,12 @@
 .PlayerEntry {
   font-size: 1.5rem;
   background-color: rgb(182, 226, 175);
-  border-color: rgb(0, 0, 0);
-  border: 2px;
+  border-color: rgb(26, 85, 21);
+  border-width: 2px;
   border-radius: 10px;
   padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-style: solid;
 }
 
 .PlayerList {
